tests/NormalTests/paczka1/fuzzy1/62556122.err
Error in line 23: iCzv6MJ A698 81,3
Error in line 26: A2sSRXY A698 73,2
Error in line 15: hnJYoDhGIIC S380 2,2
Error in line 33: S668 S380 26,3
Error in line 24: iCzv6MJ S668 62,4
Error in line 34: S668 S668 90,6
